@@ -1,3 +1,4 @@
+If the user sets acceleration and velocity then presses go, should switch to acceleration mode so the acceleration is not overwritten.
 Dragging man should be absolute, not relative, so the mouse doesn't get offset after wall collision
 Add chart zoom buttons
 Fix layout so screen size can change
